fix: Adjust margin-top in paymentRequestsView.html

--- a/application/app/src/js/app/components/paymentRequests/views/paymentRequestsView.html
+++ b/application/app/src/js/app/components/paymentRequests/views/paymentRequestsView.html
@@ -1,4 +1,4 @@
-<div class="lexart-wa__hdr lexart-flex">
+<div class="lexart-wa__hdr lexart-flex" style="margin-top: 0px !important">
 	<div class="lexart-flex-5">
 		<h1 class="lexart-wa__tit">
 			<a class="lexart-bc-item">{{ 'payment_requests.title' | translate }}</a>
