feat: Adjusted the template to meet the requirements.

--- a/application/app/src/js/app/components/paymentRequestsAdmin/views/adminPaymentRequestsView.html
+++ b/application/app/src/js/app/components/paymentRequestsAdmin/views/adminPaymentRequestsView.html
@@ -1,104 +1,103 @@
 <div class="lexart-wa__hdr lexart-flex">
 	<div class="lexart-flex-5">
-		<h1 class="lexart-wa__tit">
-			<a class="lexart-bc-item">{{ 'payment_requests.title' | translate }}</a>
-		</h1>
+			<h1 class="lexart-wa__tit">
+					<a class="lexart-bc-item">{{ 'payment_requests.title' | translate }}</a>
+			</h1>
 	</div>
 </div>
-<details>
-    <summary>
-        <span class="summary-title">{{ 'payment_requests.form_accordion.title' | translate }}</span>
-        <div class="summary-chevron-up">
-            <i class="ri-arrow-right-s-line feather feather-chevron-down"></i>
-        </div>
-    </summary>
-    <div class="lexart-wa__cnt summary-content">
-        <form class="lexart-frm" ng-submit="submitForm()">
-            <div class="lexart-frm__fld">
-                <label class="lexart-frm__lbl" for="concept-select">
-                    <span class="lexart-frm__lbl-name">
-                        <b>{{ 'payment_requests.form_accordion.filters.concept_input.label' | translate }}</b>
-                    </span>
-                    <ui-select
-                        ng-change="updateFilters()"
-                        id="concept-select"
-                        ng-model="paymentRequestFilters.concept"
-                        class="lexart-select lexart-select--input"
-                        theme="selectize"
-                        append-to-body="true"
-                    >
-                        <ui-select-match
-                            placeholder="{{ 'payment_requests.form_accordion.filters.concept_input.placeholder' | translate }}"
-                        >
-                            {{conceptTexts[$select.selected]}}
-                        </ui-select-match>
 
+<div class="lexart-wa__cnt summary-content">
+	<form class="lexart-frm lexart-frm--inline" ng-submit="submitForm()">
+			<div class="lexart-frm__fld">
+					<label class="lexart-frm__lbl" for="user-select">
+							<span class="lexart-frm__lbl-name">
+									<b>{{ 'payment_requests.form_accordion.filters.user_input.label' | translate }}</b>
+							</span>
+							<ui-select id="user-select" ng-model="paymentRequestFilters.user" class="lexart-select lexart-select--input" theme="selectize" append-to-body="true">
+									<ui-select-match placeholder="{{ 'payment_requests.form_accordion.filters.user_input.placeholder' | translate }}">
+											{{$select.selected.name}}
+									</ui-select-match>
+									<ui-select-choices repeat="user in users | filter: $select.search">
+											<div ng-bind-html="user.name | highlight: $select.search"></div>
+									</ui-select-choices>
+							</ui-select>
+					</label>
+			</div>
 
-                        <ui-select-choices repeat="concept in concepts | filter: $select.search">
-                            <div ng-bind-html="conceptTexts[concept] | highlight: $select.search"></div>
-                        </ui-select-choices>
-                    </ui-select>
-                </label>
-            </div>
-            <div class="lexart-frm__fld">
-                <label class="lexart-frm__lbl" for="concept-select">
-                    <span class="lexart-frm__lbl-name">
-                        <b>{{ 'payment_requests.form_accordion.filters.status_input.label' | translate }}</b>
-                    </span>
-                    <ui-select
-                        id="status-select"
-                        ng-change="updateFilters()"
-                        ng-model="paymentRequestFilters.status"
-                        class="lexart-select lexart-select--input"
-                        theme="selectize"
-                        append-to-body="true"
-                    >
-                        <ui-select-match
-                            placeholder="{{ 'payment_requests.form_accordion.filters.status_input.placeholder' | translate }}"
-                        >
-                            {{statusTexts[$select.selected]}}
-                        </ui-select-match>
+			<div class="lexart-frm__fld">
+					<label class="lexart-frm__lbl" for="status-select">
+							<span class="lexart-frm__lbl-name">
+									<b>{{ 'payment_requests.form_accordion.filters.status_input.label' | translate }}</b>
+							</span>
+							<ui-select id="status-select" ng-model="paymentRequestFilters.status" class="lexart-select lexart-select--input" theme="selectize" append-to-body="true">
+									<ui-select-match placeholder="{{ 'payment_requests.form_accordion.filters.status_input.placeholder' | translate }}">
+											{{statusTexts[$select.selected]}}
+									</ui-select-match>
+									<ui-select-choices repeat="status in statuses | filter: $select.search">
+											<div ng-bind-html="statusTexts[status] | highlight: $select.search"></div>
+									</ui-select-choices>
+							</ui-select>
+					</label>
+			</div>
 
-                        <ui-select-choices repeat="status in statuses | filter: $select.search">
-                            <div ng-bind-html="statusTexts[status] | highlight: $select.search"></div>
-                        </ui-select-choices>
-                    </ui-select>
-                </label>
-            </div>
-            <div class="lexart-frm__fld">
-                <label class="lexart-frm__lbl" for="concept_description-input">
-                    <span class="lexart-frm__lbl-name">
-                        <b>{{ 'payment_requests.form_accordion.filters.user_input.label' | translate }}</b>
-                    </span>
-                    <ui-select
-                    id="user-select"
-                    ng-model="paymentRequestFilters.user"
-                    class="lexart-select lexart-select--input"
-                    theme="selectize"
-                    append-to-body="true"
-                    >
-                    <ui-select-match
-                            placeholder="{{ 'payment_requests.form_accordion.filters.user_input.placeholder' | translate }}"
-                        >
-                        {{$select.selected.name}}
-                    </ui-select-match>
+			<div class="lexart-frm__fld">
+					<label class="lexart-frm__lbl" for="concept-select">
+							<span class="lexart-frm__lbl-name">
+									<b>{{ 'payment_requests.form_accordion.filters.concept_input.label' | translate }}</b>
+							</span>
+							<ui-select id="concept-select" ng-model="paymentRequestFilters.concept" class="lexart-select lexart-select--input" theme="selectize" append-to-body="true">
+									<ui-select-match placeholder="{{ 'payment_requests.form_accordion.filters.concept_input.placeholder' | translate }}">
+											{{conceptTexts[$select.selected]}}
+									</ui-select-match>
+									<ui-select-choices repeat="concept in concepts | filter: $select.search">
+											<div ng-bind-html="conceptTexts[concept] | highlight: $select.search"></div>
+									</ui-select-choices>
+							</ui-select>
+					</label>
+			</div>
 
-                    <ui-select-choices repeat="user in users | filter: $select.search">
-                        <div ng-bind-html="user.name | highlight: $select.search"></div>
-                    </ui-select-choices>
-                </ui-select>
-                </label>
-            </div>
-            <div class="lexart-frm__fld">
-                <button class="lexart-btn lexart-btn--darkest lexart-btn__right" type="submit" style="margin-right: 0;">
-                    {{ 'payment_requests.form_accordion.add_filters_button_text' | translate }}
-                </button>
-            </div>
+			<div class="lexart-frm__fld">
+					<label class="lexart-frm__lbl" for="currency-select">
+							<span class="lexart-frm__lbl-name">
+									<b>{{ 'payment_requests.currency-label' | translate }}</b>
+							</span>
+							<ui-select id="currency-select" ng-model="paymentRequestFilters.currency" class="lexart-select lexart-select--input" theme="selectize" append-to-body="true">
+									<ui-select-match placeholder="Select currency">
+											{{currencyTexts[$select.selected]}}
+									</ui-select-match>
+									<ui-select-choices repeat="currency in currencies | filter: $select.search">
+											<div ng-bind-html="currencyTexts[currency] | highlight: $select.search"></div>
+									</ui-select-choices>
+							</ui-select>
+					</label>
+			</div>
 
-        </form>
-    </div>
+			<div class="lexart-frm__fld">
+					<label class="lexart-frm__lbl" for="start-date">
+							<span class="lexart-frm__lbl-name">
+									<b>{{ 'payment_requests.start-date' | translate }}</b>
+							</span>
+							<input type="date" id="start-date" ng-model="paymentRequestFilters.startDate" class="lexart-input lexart-input--date">
+					</label>
+			</div>
 
-</details>
+			<div class="lexart-frm__fld">
+					<label class="lexart-frm__lbl" for="end-date">
+							<span class="lexart-frm__lbl-name">
+									<b>{{ 'payment_requests.end-date' | translate }}</b>
+							</span>
+							<input type="date" id="end-date" ng-model="paymentRequestFilters.endDate" class="lexart-input lexart-input--date">
+					</label>
+			</div>
+
+			<div class="lexart-frm__fld">
+					<button class="lexart-btn lexart-btn--darkest lexart-btn__right" type="submit" style="margin-right: 0;">
+						{{ 'payment_requests.filter' | translate }}
+					</button>
+			</div>
+	</form>
+</div>
+
 <details style="margin-top: 1rem;">
     <summary>
         <span class="summary-title">{{ 'payment_requests.title' | translate }}</span>
@@ -107,27 +106,26 @@
         </div>
     </summary>
     <div class="lexart-wa__cnt summary-content">
-        <table class="lexart-table">
-            <thead>
-                <tr>
-                    <th>{{ 'payment_requests.all-table.user_table_header' | translate  }}</th>
-                    <th>{{ 'payment_requests.all-table.date_table_header' | translate  }}</th>
-                    <th>{{ 'payment_requests.all-table.total_table_header' | translate  }}</th>
-                    <th>{{ 'payment_requests.all-table.currency_table_header' | translate  }}</th>
-                    <th>{{ 'payment_requests.all-table.info_table_header' | translate  }}</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="paymentRequest in allPaymentRequests">
-                    <td>{{paymentRequest.user.name}}</td>
-                    <td>{{paymentRequest.created_at}}</td>
-                    <td>{{paymentRequest.total}}</td>
-                    <td>{{ paymentRequest.currency }}</td>
-                    <td class="lexart-table__action-cell">
-                            <i class="ri-information-line" ng-click="showPaymentRequestDetailsDialog(paymentRequest)"></i>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+			<table class="lexart-table">
+					<thead>
+						<tr>
+							<th>{{ 'payment_requests.all-table.user_table_header' | translate }}</th>
+							<th>{{ 'payment_requests.all-table.date_table_header' | translate }}</th>
+							<th>{{ 'payment_requests.all-table.total_table_header' | translate }}</th>
+							<th>{{ 'payment_requests.all-table.info_table_header' | translate }}</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr ng-repeat="paymentRequest in allPaymentRequests">
+							<td>{{paymentRequest.user.name}}</td>
+							<td>{{paymentRequest.created_at}}</td>
+							<td>{{paymentRequest.currency}} {{paymentRequest.total}}</td>
+							<td class="lexart-table__action-cell">
+									<i class="ri-information-line" ng-click="showPaymentRequestDetailsDialog(paymentRequest)"></i>
+							</td>
+						</tr>
+					</tbody>
+			</table>
+		</div>
+
 </details>
